@@ -1,3 +1,9 @@
+2004-07-09  Edd Dumbill <edd@usefulinc.com>
+
+	* raptor_locator.c: add accessors for parts of the raptor_locator
+	struct.
+	* raptor.h: add prototypes for the accessors
+
 2004-07-09  Dave Beckett  <Dave.Beckett@bristol.ac.uk>
 
 	* ChangeLog: ChangeLog in CVS now
